# cfs_mpu6050

./: CMakeLists.txt
fsw/for_build/: Makefile
fsw/mission_inc/: mpu6050_mission_cfg.h  mpu6050_perfids.h
fsw/platform_inc/: mpu6050_msgids.h  mpu6050_platform_cfg.h
fsw/src/: mpu6050_app.c  mpu6050_app.h  mpu6050_hw_drv.c  mpu6050_hw_drv.h  mpu6050_msg.h  mpu6050_private_ids.h  mpu6050_private_types.h  mpu6050_registers.h  mpu6050_table.c
fsw/unit_test/: Makefile
